@@ -6,6 +6,8 @@ Overview of changes in lightdm 0.4.2
       and the active is used for the first display if Plymouth is
       detected.  A new option minimum-vt is added to select the first
       VT to be used for other displays.
+    * Make login switch to existing session if already logged in.  Make D-Bus
+      interface switch to existing sessions correctly.
 
 Overview of changes in lightdm 0.4.1
 
